--- a/templates/assistant_form_part6.html
+++ b/templates/assistant_form_part6.html
@@ -1,4 +1,4 @@
-{% extends "layout.html" %}
+{% extends "bootstrap5/layout.html" %}
 {% load static %}
 {% load i18n %}
 {% load l10n %}
@@ -27,25 +27,25 @@
 * see http://www.gnu.org/licenses/.
 {% endcomment %}
 {% block breadcrumb %}
-<li><a href="{% url 'assistant_mandates' %}" id="lnk_my_mandates">{% trans 'My mandates' %}</a></li>
-<li class="active">{% trans 'Renewal application form' %}</li>
+<li class="breadcrumb-item"><a href="{% url 'assistant_mandates' %}" id="lnk_my_mandates">{% trans 'My mandates' %}</a></li>
+<li class="breadcrumb-item active">{% trans 'Renewal application form' %}</li>
 {% endblock %}
 {% block content %}
 <ul class="nav nav-tabs ">
-<li><a href="{% url 'assistant_mandates' %}">{% trans 'My mandates' %}</a></li>
-<li><a href="{% url 'form_part1_edit' %}">{% trans 'Administrative' %}</a></li>
-<li><a href="{% url 'mandate_learning_units' %}">{% trans 'Learning units' %}</a></li>
-{% if mandate.assistant_type == "ASSISTANT" %}
-    <li><a href="{% url 'form_part3_edit' %}">{% trans 'Ph.D.' %}</a></li>
-    <li><a href="{% url 'form_part4_edit' %}">{% trans 'Research' %}</a></li>
-{% endif %}
-<li><a href="{% url 'form_part5_edit' %}">{% trans 'Activities' %}</a></li>
-<li class="active"><a href="{% url 'form_part6_edit' %}">{% trans 'Summary' %}</a></li>
+    <li class="nav-item"><a href="{% url 'assistant_mandates' %}" class="nav-link">{% trans 'My mandates' %}</a></li>
+    <li class="nav-item"><a href="{% url 'form_part1_edit' %}" class="nav-link">{% trans 'Administrative' %}</a></li>
+    <li class="nav-item"><a href="{% url 'mandate_learning_units' %}" class="nav-link">{% trans 'Learning units' %}</a></li>
+    {% if mandate.assistant_type == "ASSISTANT" %}
+        <li class="nav-item"><a href="{% url 'form_part3_edit' %}" class="nav-link">{% trans 'Ph.D.' %}</a></li>
+        <li class="nav-item"><a href="{% url 'form_part4_edit' %}" class="nav-link">{% trans 'Research' %}</a></li>
+    {% endif %}
+    <li class="nav-item"><a href="{% url 'form_part5_edit' %}" class="nav-link">{% trans 'Activities' %}</a></li>
+    <li class="nav-item"><a href="{% url 'form_part6_edit' %}" class="nav-link active">{% trans 'Summary' %}</a></li>
 </ul>
-    <div class="panel panel-default">
-        <div class="panel-body">
+    <div class="card">
+        <div class="card-body">
             {% if msg %}
-            <h5><p style="color:red">{{ msg }}</p></h5>
+            <h5><p class="text-danger">{{ msg }}</p></h5>
         {% endif %}
         <form id="pst-form-part6" method="POST" action="{% url 'form_part6_save' %}">
         <span class="error">{{ form.non_field_errors }}</span>
@@ -53,11 +53,11 @@
  		{% for hidden in form.hidden_fields %}
 			{{ hidden }}
 		{% endfor %}
-        <div class="panel-default">
-            <div class="panel-heading">
-                <h4>{% trans 'Summary' %}</h4>
+        <div class="card border-0">
+            <div class="card-heading border-bottom">
+                <h4 class="fs-5 my-2">{% trans 'Summary' %}</h4>
             </div>
-            <div class="panel-body">
+            <div class="card-body">
                 <h6>{% trans 'The total must be equal to 100' %}</h6>
             </div>
         </div>
@@ -89,9 +89,9 @@
             {{ form.formation_activities_percent }}
             <span class="error">{{ form.formation_activities_percent.errors }}</span>
         </div>
-            <div class="panel-default">
-                <div class="panel-heading">
-                    <h4>{% trans 'General comment' %}</h4>
+        <div class="card border-0">
+            <div class="card-heading border-bottom">
+                <h4 class="fs-5 my-2">{% trans 'General comment' %}</h4>
                 </div>
             </div>
             <div class="form-group">
@@ -106,13 +106,13 @@
             <div class="btn-toolbar">
                 <button type="submit" class="btn btn-primary"
                         title="{% trans 'Save' %}" id="bt_pstform_part6_save">
-                    <span class="far fa-save" aria-hidden="true"></span> {% trans 'Save' %}
+                    <i class="far fa-save" aria-hidden="true"></i> {% trans 'Save' %}
                 </button>
                 <button type="submit" class="btn btn-success" title="{% trans 'Validate and submit' %}"
                         id="bt_pstform_validate_and_submit" name="validate_and_submit"
                         onclick="return confirm('{% trans 'Are you sure you want to validate and submit? This action is irreversible.' %}')">
-                <span class="fas fa-check" aria-hidden="true">
-                </span> {% trans 'Validate and submit' %}
+                <i class="fas fa-check" aria-hidden="true">
+                </i> {% trans 'Validate and submit' %}
                 </button>
             </div>
             <input type="hidden" name="mandate_id" value="{{ mandate.id }}">
