--- a/templates/assistant_form_part4.html
+++ b/templates/assistant_form_part4.html
@@ -1,4 +1,4 @@
-{% extends "layout.html" %}
+{% extends "bootstrap5/layout.html" %}
 {% load static %}
 {% load i18n %}
 {% load l10n %}
@@ -27,27 +27,27 @@
 * see http://www.gnu.org/licenses/.
 {% endcomment %}
 {% block breadcrumb %}
-<li><a href="{% url 'assistant_mandates' %}" id="lnk_my_mandates">{% trans 'My mandates' %}</a></li>
-<li class="active">{% trans 'Renewal application form' %}</li>
+<li class="breadcrumb-item"><a href="{% url 'assistant_mandates' %}" id="lnk_my_mandates">{% trans 'My mandates' %}</a></li>
+<li class="breadcrumb-item active">{% trans 'Renewal application form' %}</li>
 {% endblock %}
 {% block content %}
 <ul class="nav nav-tabs ">
-<li><a href="{% url 'assistant_mandates' %}">{% trans 'My mandates' %}</a></li>
-<li><a href="{% url 'form_part1_edit' %}">{% trans 'Administrative' %}</a></li>
-<li><a href="{% url 'mandate_learning_units' %}">{% trans 'Learning units' %}</a></li>
-<li><a href="{% url 'form_part3_edit' %}">{% trans 'Ph.D.' %}</a></li>
-<li class="active"><a href="{% url 'form_part4_edit' %}">{% trans 'Research' %}</a></li>
-<li><a href="{% url 'form_part5_edit' %}">{% trans 'Activities' %}</a></li>
-<li><a href="{% url 'form_part6_edit' %}">{% trans 'Summary' %}</a></li>
+    <li class="nav-item"><a href="{% url 'assistant_mandates' %}" class="nav-link">{% trans 'My mandates' %}</a></li>
+    <li class="nav-item"><a href="{% url 'form_part1_edit' %}" class="nav-link">{% trans 'Administrative' %}</a></li>
+    <li class="nav-item"><a href="{% url 'mandate_learning_units' %}" class="nav-link">{% trans 'Learning units' %}</a></li>
+    <li class="nav-item"><a href="{% url 'form_part3_edit' %}" class="nav-link">{% trans 'Ph.D.' %}</a></li>
+    <li class="nav-item"><a href="{% url 'form_part4_edit' %}" class="nav-link active">{% trans 'Research' %}</a></li>
+    <li class="nav-item"><a href="{% url 'form_part5_edit' %}" class="nav-link">{% trans 'Activities' %}</a></li>
+    <li class="nav-item"><a href="{% url 'form_part6_edit' %}" class="nav-link">{% trans 'Summary' %}</a></li>
 </ul>
-<div class="panel panel-default">
-	<div class="panel-body">
+<div class="card">
+	<div class="card-body">
  		<form id="pst-form-part4" method="POST" enctype="multipart/form-data" action="{% url 'form_part4_save' %}">
  		{% csrf_token %}
  		{{ form.non_field_errors }}
- 		<div class="panel-default">
-  			<div class="panel-heading">
-  				<h4>{% trans 'Research' %}</h4>
+ 		<div class="card border-0">
+            <div class="card-heading border-bottom">
+                <h4 class="fs-5 my-2">{% trans 'Research' %}</h4>
     		</div>
     	</div>
     	<div class="form-group" style="padding-top: 10px">
@@ -80,29 +80,29 @@
             {{ form.remark }}
             <span class="error">{{ form.remark.errors }}</span>
       	</div>
-    	<div class="panel-default">
-  			<div class="panel-heading">
-  				<h4>{% trans 'List of publications in PDF format (DIAL)' %}</h4>
+          <div class="card border-0">
+            <div class="card-heading border-bottom">
+                <h4 class="fs-5 my-2">{% trans 'List of publications in PDF format (DIAL)' %}</h4>
     		</div>
     	</div>
         {% for file in files %}
-            <div class="row" style="padding-top: 15px;">
-                <div class="col-md-2" style="text-align: left">
-                    <a class="btn btn-default btn-danger btn-sm" id="btn_delete_file" style="margin-right: 5px;"
+            <div class="row pt-3">
+                <div class="col-lg-2" style="text-align: left">
+                    <a class="btn btn-danger btn-md me-2" id="btn_delete_file"
                        title="{% trans 'Delete'%}"
                        onclick="location.href='{% url 'assistant_file_delete' file.id 'form_part4_edit' %}';">
-                    <span class="fas fa-times" aria-hidden="true" id="spn_delete_file"></span>
+                    <i class="fas fa-times" aria-hidden="true" id="spn_delete_file"></i>
                         {% trans 'Delete file' %}</a>
                 </div>
-                <div class="col-md-10" id="hdn_filename" style="text-align: left">
+                <div class="col-lg-10 text-start" id="hdn_filename">
                    <a href="{% url 'assistant_file_download' document_file_id=file.id %}" class="no_spinner">{{ file.document_file }}</a>
                 </div>
             </div>
         {% endfor %}
-        <div class="row" style="padding-top: 15px; padding-left: 15px;">
-            <a class="btn btn-default" data-toggle="modal" data-target="#pnl_upload_documents"
-               id="btn_add_file" style="margin-right: 5px;" title="{% trans 'Add file'%}">
-                <span class="fas fa-arrow-circle-up" aria-hidden="true" id="spn_add_file"></span>
+        <div class="row px-3">
+            <a class="btn btn-default me-2" data-bs-toggle="modal" data-bs-target="#pnl_upload_documents"
+               id="btn_add_file" title="{% trans 'Add file'%}">
+                <i class="fas fa-arrow-circle-up" aria-hidden="true" id="spn_add_file"></i>
                 {% trans 'Attach a PDF file' %}</a>
         </div>
         <hr>
@@ -110,7 +110,7 @@
 		   name="mandate_id" title="mandate_id" >
         <input type="hidden" value="{{ document_type }}" id="hdn_description" name="description" title="description">
         <button type="submit" class="btn btn-primary" title="{% trans 'Save'%}" id="bt_pstform_part3_save">
-     	<span class="far fa-save" aria-hidden="true"></span> {% trans 'Save'%}</button>
+     	<i class="far fa-save" aria-hidden="true"></i> {% trans 'Save'%}</button>
     	</form>
 	</div>
 </div>
