--- a/templates/assistant_mandates.html
+++ b/templates/assistant_mandates.html
@@ -1,7 +1,7 @@
-{% extends "layout.html" %}
+{% extends "bootstrap5/layout.html" %}
 {% load static %}
 {% load i18n %}
-{
+
 
 {% comment "License" %}
 * OSIS stands for Open Student Information System. It's an application
@@ -26,18 +26,18 @@
 * at the root of the source code of this program.  If not,
 * see http://www.gnu.org/licenses/.
 {% endcomment %}
-    
+
 {% block breadcrumb %}
-<li class="active">{% trans 'List of mandates' %}</li>
+<li class="breadcrumb-item active">{% trans 'List of mandates' %}</li>
 {% endblock %}
 {% block content %}
 <div class="page-header">
     <h2>{% trans 'Assistant mandate renewal application' %}</h2>
 </div>
-<div class="panel panel-default">
-    <div class="panel-body">
+<div class="card">
+    <div class="card-body">
 		<h3>{{ assistant.person }}</h3>
-		<div class="table-responsive">  
+		<div class="table-responsive">
 		<table id="myTable" class="table table-hover" cellspacing="0" width="100%">
 		<thead><tr>
       	<th>{% trans 'Academic year' %}</th>
@@ -53,7 +53,7 @@
 			<tr>
 			<form method="post" action=" {% url 'mandate_change_state' %} ">
 			{% csrf_token %}
-			<td>{{ mandate.academic_year }}</td>	
+			<td>{{ mandate.academic_year }}</td>
 			<td>
                 <ul>
                     {% for entity in mandate.entities %}
@@ -65,41 +65,40 @@
             </td>
 			<td>{{ mandate.fulltime_equivalent }}</td>
             <td>{% trans mandate.get_state_display %}</td>
-			<td align="center">
+			<td class="text-center">
 			{% if mandate.state == "TO_DO" %}
 				<button type="submit" class="btn btn-success" title="{% trans 'Accept'%}" id="bt_mandate_accept"
 						name="bt_mandate_accept" onclick="return confirm('{% trans 'Are you sure you want to accept the renewal request? This action is irreversible.' %}')">
-					<span class="fas fa-check-circle" aria-hidden="true"></span> {% trans 'Accept'%}</button>
+					<i class="fas fa-check-circle" aria-hidden="true"></i> {% trans 'Accept'%}</button>
 				<button type="submit" class="btn btn-danger" title="{% trans 'Refuse'%}" id="bt_mandate_decline"
 						name="bt_mandate_decline" onclick="return confirm('{% trans 'Are you sure you want to decline the renewal request? This action is irreversible.' %}')">
-					<span class="fas fa-times-circle" aria-hidden="true"></span> {% trans 'Refuse'%}
+					<i class="fas fa-times-circle" aria-hidden="true"></i> {% trans 'Refuse'%}
 				</button>
 			{% elif mandate.state == "TRTS" and mandate.academic_year == current_academic_year and not can_see_file %}
 				<a href="{% url 'form_part1_edit' %}">
                     <button type="button" class="btn btn-link btn-lg" title="{% trans 'Edit'%}" id="bt_mandate_edit">
-                        <span class="far fa-edit" aria-hidden="true"></span> {% trans 'Edit'%}
+                        <i class="far fa-edit" aria-hidden="true"></i> {% trans 'Edit'%}
                     </button></a>
             {% elif mandate.state == "DONE"  and can_see_file %}
-                <a href="{% url 'assistant_mandate_reviews' mandate.id %}">
-                <button type="button" class="btn btn-link btn-lg" title="{% trans 'View'%}" id="bt_view">
-                    <span class="far fa-eye" aria-hidden="true"></span> {% trans 'View' %}
-                </button></a>
+                <a href="{% url 'assistant_mandate_reviews' mandate.id %}" class="btn btn-link btn-lg text-decoration-none" title="{% trans 'View'%}" id="bt_view">
+                    <i class="fas fa-eye" aria-hidden="true"></i> {% trans 'View' %}
+                </a>
             {% else %}
-                <button type="button" class="btn btn-link btn-lg" title="{% trans 'View'%}" id="bt_nothing" disabled>
-                    <span class="fas fa-eye-slash" aria-hidden="true"></span>
+                <button type="button" class="btn btn-link btn-lg disabled" title="{% trans 'View'%}" id="bt_nothing" >
+                    <i class="fas fa-eye-slash" aria-hidden="true"></i>
                 </button>
 			{% endif %}
             <input type="hidden" value="{{mandate.id | default_if_none:''}}" id="hdn_current_mandate_id"
                    name="mandate_id" title="mandate_id" >
 			</form>
 			</td>
-			<td align="right">
+			<td class="text-end">
                 {% if mandate.state != "TO_DO" and mandate.state != "DECLINED" %}
                     <form method="POST" action="{% url 'export_mandate_pdf' %}">
                         {% csrf_token %}
-                        <button type="submit" class="btn btn-link btn-lg no_spinner" title="{% trans 'Generate a PDF file' %}"
+                        <button type="submit" class="btn btn-link btn-lg no_spinner text-decoration-none" title="{% trans 'Generate a PDF file' %}"
                                 id="bt_generate_pdf">
-                            <span class="far fa-file-download-file" aria-hidden="true"></span> PDF
+                            <i class="far fa-file-download-file" aria-hidden="true"></i> PDF
                         </button>
                         <input type="hidden" value="{{mandate.id | default_if_none:''}}" id="hdn_mandate_id"
                             name="mandate_id" title="mandate_id" >
