--- a/templates/manager_home.html
+++ b/templates/manager_home.html
@@ -1,4 +1,4 @@
-{% extends "layout.html" %}
+{% extends "bootstrap5/layout.html" %}
 {% load static %}
 {% load i18n %}
 
@@ -26,80 +26,80 @@
 * see http://www.gnu.org/licenses/.
 {% endcomment %}
 {% block breadcrumb %}
-<li><a href="{% url 'institution' %}" id="lnk_institution">{% trans 'Institution' %}</a></li>
-<li><a href="{% url 'mandates' %}" id="lnk_mandates">{% trans 'Mandates' %}</a></li>
-<li class="active">{% trans 'Assistants' %}</li>
+<li class="breadcrumb-item"><a href="{% url 'institution' %}" id="lnk_institution">{% trans 'Institution' %}</a></li>
+<li class="breadcrumb-item"><a href="{% url 'mandates' %}" id="lnk_mandates">{% trans 'Mandates' %}</a></li>
+<li class="breadcrumb-item active">{% trans 'Assistants' %}</li>
 {% endblock %}
 {% block content %}
 <div class="page-header">
     <h3>{% trans 'Assistant mandate renewal application processing' %}</h3>
 </div>
-<div class="panel panel-default">
-    <div class="panel-body">
-        <div class="row" style="padding-top: 10px;">
-            <div class="col-md-1"><i class="fas fa-tachometer-alt" style="font-size: 400%; color: #6699FF;"></i></div>
-            <div class="col-md-5">
+<div class="card">
+    <div class="card-body">
+        <div class="row pt-2">
+            <div class="col-lg-1"><i class="fas fa-tachometer-alt" style="font-size: 400%; color: #6699FF;"></i></div>
+            <div class="col-lg-5">
                 <h4 class="media-heading"><a href="{% url 'mandates_list' %}" id="lnk_dashboard">{% trans 'Dashboard' %}</a></h4>
                 <p>{% trans 'Table listing all the files' %}</p>
             </div>
-            <div class="col-md-1"><i class="fa fa-users" style="font-size: 400%; color: #6699FF;"></i></div>
-            <div class="col-md-5">
+            <div class="col-lg-1"><i class="fa fa-users" style="font-size: 400%; color: #6699FF;"></i></div>
+            <div class="col-lg-5">
                 <h4 class="media-heading"><a href="{% url 'reviewers_list' %}" id="lnk_reviewers">
                     {% trans 'Reviewers' %}</a></h4>
                 <p>{% trans 'Adding, replacing and deleting reviewers' %}</p>
             </div>
         </div>
-        <div class="row" style="padding-top: 10px;">
-            <div class="col-md-1"><i class="fa fa-download" style="font-size: 400%; color: #6699FF;"></i></div>
-            <div class="col-md-5">
+        <div class="row pt-2">
+            <div class="col-lg-1"><i class="fa fa-download" style="font-size: 400%; color: #6699FF;"></i></div>
+            <div class="col-lg-5">
                 <h4 class="media-heading"><a href="{% url 'load_mandates' %}" id="lnk_load_mandates">
                     {% trans 'Import assistant mandates' %}</a></h4>
                 <p>{% trans 'Importing files from an XLSX file' %}</p>
             </div>
-            <div class="col-md-1"><i class="fa fa-upload" style="font-size: 400%; color: #6699FF;"></i></div>
-            <div class="col-md-5">
+            <div class="col-lg-1"><i class="fa fa-upload" style="font-size: 400%; color: #6699FF;"></i></div>
+            <div class="col-lg-5">
                 <h4 class="media-heading"><a href="{% url 'export_mandates' %}" id="lnk_upload_mandates" class="no_spinner">
                     {% trans 'Export of assistants mandates' %}</a></h4>
                 <p>{% trans 'Exporting files to an XLSX file' %}</p>
             </div>
         </div>
-        <div class="row" style="padding-top: 10px;">
-            <div class="col-md-1"><i class="fa fa-upload" style="font-size: 400%; color: #6699FF;"></i></div>
-            <div class="col-md-5">
+        <div class="row pt-2">
+            <div class="col-lg-1"><i class="fa fa-upload" style="font-size: 400%; color: #6699FF;"></i></div>
+            <div class="col-lg-5">
                 <h4 class="media-heading"><a href="{% url 'export_mandates_pdf' %}" id="lnk_export_mandates" class="no_spinner">
                     {% trans 'Export of assistants mandates' %}</a></h4>
                 <p>{% trans 'Exporting all data to a PDF file' %}</p>
             </div>
-            <div class="col-md-1"><i class="fa fa-upload" style="font-size: 400%; color: #6699FF;"></i></div>
-            <div class="col-md-5">
+            <div class="col-lg-1"><i class="fa fa-upload" style="font-size: 400%; color: #6699FF;"></i></div>
+            <div class="col-lg-5">
                 <h4 class="media-heading"><a href="{% url 'export_declined_mandates_pdf' %}" id="lnk_export_declined_mandates" class="no_spinner">
                     {% trans 'Export of the declined assistants mandates' %}</a></h4>
                 <p>{% trans 'Exporting data for which mandate has been declined' %}</p>
             </div>
         </div>
-        <div class="row" style="padding-top: 10px;">
-            <div class="col-md-1"><i class="fa fa-upload" style="font-size: 400%; color: #6699FF;"></i></div>
-            <div class="col-md-5">
+        <div class="row pt-2">
+            <div class="col-lg-1"><i class="fa fa-upload" style="font-size: 400%; color: #6699FF;"></i></div>
+            <div class="col-lg-5">
                 <h4 class="media-heading"><a href="{% url 'export_mandates_to_sap' %}" id="lnk_export_mandates_to_sap" class="no_spinner">
                     {% trans 'Export mandates to sap' %}</a></h4>
                 <p>{% trans 'This export is used to add assistants form to SAP' %}</p>
             </div>
 
-            <div class="col-md-1"><i class="fa fa-upload" style="font-size: 400%; color: #6699FF;"></i></div>
-            <div class="col-md-5">
+            <div class="col-lg-1"><i class="fa fa-upload" style="font-size: 400%; color: #6699FF;"></i></div>
+            <div class="col-lg-5">
                 <h4 class="media-heading"><a href="{% url 'export_list_declined_mandates_pdf' %}" id="lnk_export_declined_mandates" class="no_spinner">
                     {% trans 'Export list of declined mandate assistants ' %}</a></h4>
                 <p>{% trans 'Exporting assistants who declined their renewal' %}</p>
             </div>
         </div>
-        <div class="row" style="padding-top: 10px;">
-            <div class="col-md-1"><i class="far fa-envelope" style="font-size: 400%; color: #6699FF;"></i></div>
-            <div class="col-md-5">
+        <div class="row pt-2">
+            <div class="col-lg-1"><i class="far fa-envelope" style="font-size: 400%; color: #6699FF;"></i></div>
+            <div class="col-lg-5">
                 <h4 class="media-heading"><a href="{% url 'messages_history' %}" id="lnk_emails">{% trans 'Emails' %}</a></h4>
                 <p>{% trans 'Mail service management to assistants and Deans of Faculty' %}</p>
             </div>
-            <div class="col-md-1"><i class="fas fa-cogs" style="font-size: 400%; color: #6699FF;"></i></div>
-            <div class="col-md-5">
+            <div class="col-lg-1"><i class="fas fa-cogs" style="font-size: 400%; color: #6699FF;"></i></div>
+            <div class="col-lg-5">
                 <h4 class="media-heading"><a href="{% url 'settings_edit' %}" id="lnk_settings">{% trans 'Settings' %}</a></h4>
                 <p>{% trans 'Management of application access dates' %}</p>
             </div>
