--- a/templates/mandates_list.html
+++ b/templates/mandates_list.html
@@ -1,4 +1,4 @@
-{% extends "layout.html" %}
+{% extends "bootstrap5/layout.html" %}
 {% load static %}
 {% load i18n %}
 
@@ -26,22 +26,22 @@
 * see http://www.gnu.org/licenses/.
 {% endcomment %}
 {% block breadcrumb %}
-<li><a href="{% url 'manager_home' %}" id="lnk_manager_home">{% trans 'Assistants' %}</a></li>
-<li class="active">{% trans 'List of mandates' %}</li>
+<li class="breadcrumb-item"><a href="{% url 'manager_home' %}" id="lnk_manager_home">{% trans 'Assistants' %}</a></li>
+<li class="breadcrumb-item active">{% trans 'List of mandates' %}</li>
 {% endblock %}
 
 {% block content %}
 <div class="page-header">
     <h3>{% trans 'Assistant mandate renewal application processing' %} {{ year|add:1 }}</h3>
 </div>
-<div class="panel panel-default">
-    <div class="panel-body">
-        <div class="row" style="padding-bottom: 5px;">
-            <div class="col-md-12 text-right">
+<div class="card">
+    <div class="card-body">
+        <div class="row pb-2">
+            <div class="col-lg-12 text-end">
                 <form action=" {% url 'mandates_list' %} " method="GET">
                 {{ form.academic_year }}
-                <button type="submit" class="btn btn-default btn-xs" title="{% trans 'Apply'%}" id="bt_filter">
-                <span class="fas fa-check" aria-hidden="true"></span> {% trans 'Apply'%}</button>
+                <button type="submit" class="btn btn-default btn-sm" title="{% trans 'Apply'%}" id="bt_filter">
+                <i class="fas fa-check" aria-hidden="true"></i> {% trans 'Apply'%}</button>
                 </form>
             </div>
         </div>
@@ -71,7 +71,7 @@
                             <input type="hidden" name="mandate_id" value="{{ mandate.id }}">
                             <a href="mailto:{{ mandate.assistant.person.email }}">{{ mandate.assistant }}</a>
                             <button type="submit" class="btn btn-link" title="{% trans 'Edit'%}">
-                                <span class="far fa-edit" aria-hidden="true"></span> {% trans 'Edit'%}
+                                <i class="far fa-edit" aria-hidden="true"></i> {% trans 'Edit'%}
                             </button></form>
                         </td>
                         <td>
@@ -146,5 +146,5 @@
         stateSave: true
     } );
 } );
-</script>   
+</script>
 {% endblock %}
