--- a/templates/phd_supervisor_assistants_list.html
+++ b/templates/phd_supervisor_assistants_list.html
@@ -1,4 +1,4 @@
-{% extends "layout.html" %}
+{% extends "bootstrap5/layout.html" %}
 {% load static %}
 {% load i18n %}
 
@@ -26,13 +26,14 @@
 * see http://www.gnu.org/licenses/.
 {% endcomment %}
 {% block style %}
-<link rel="stylesheet" href="{% static 'css/dataTables.bootstrap.min.css' %}">
+<link rel="stylesheet" href="{% static 'css/osis.css' %}">
+<link rel="stylesheet" href="{% static 'css/bootstrap5/dataTables.bootstrap5.min.css' %}">
 {% endblock %}
 {% block breadcrumb %}
-<li class="active">{% trans 'List of files (as a thesis promoter)' %}</li>
+<li class="breadcrumb-item active">{% trans 'List of files (as a thesis promoter)' %}</li>
 {% endblock %}
 {% block content %}
-<div class="page-header">
+<div class="page-header mb-0 border-bottom-0 pb-0">
     {% if current_reviewer %}
         <h6>{% trans 'You are connected as' %} {{ current_reviewer.person }} ({% trans current_reviewer.role %}) -
             {{ current_reviewer.entity.most_recent_acronym }}</h6>
@@ -40,17 +41,17 @@
     <h3>{% trans 'Assistant mandate renewal application processing' %} {{ year|add:1 }}</h3>
     {% if current_reviewer %}
         <ul class="nav nav-tabs">
-            <li><a href="{% url 'reviewer_mandates_list' %}">{% trans 'List of files' %}</a></li>
-            <li><a href="{% url 'reviewer_mandates_list_todo' %}">{% trans 'Files that can be treated' %}</a></li>
-            <li class="active"><a href="#">{% trans 'List of files (as a thesis promoter)' %}</a></li>
+            <li class="nav-item"><a href="{% url 'reviewer_mandates_list' %}" class="nav-link">{% trans 'List of files' %}</a></li>
+            <li class="nav-item"><a href="{% url 'reviewer_mandates_list_todo' %}" class="nav-link">{% trans 'Files that can be treated' %}</a></li>
+            <li class="nav-item"><a href="#" class="nav-link active">{% trans 'List of files (as a thesis promoter)' %}</a></li>
             {% if can_delegate %}
-                <li><a href="{% url 'reviewer_delegation' %}">{% trans 'Delegation(s)' %}</a></li>
+                <li class="nav-item"><a href="{% url 'reviewer_delegation' %}" class="nav-link">{% trans 'Delegation(s)' %}</a></li>
             {% endif %}
         </ul>
     {% endif %}
 </div>
-<div class="panel panel-default">
-    <div class="panel-body">
+<div class="card {% if current_reviewer %}border-top-0 {% endif %}">
+    <div class="card-body">
         <div class="table-responsive">
         <table id="myTable" class="table table-hover table-condensed table-bordered" cellspacing="0" width="100%">
         <thead>
@@ -84,29 +85,29 @@
             <td>{{ mandate.contract_duration_fte }}</td>
             <td>{{ mandate.get_state_display }}</td>
             {% if mandate.assistant.supervisor == request.user.person and mandate.state == "PHD_SUPERVISOR" %}
-                <td align="center">
+                <td class="text-center">
                     <form method="POST" action="{% url 'phd_supervisor_review_edit' %}">
                         {% csrf_token %}
                         <input type="hidden" name="mandate_id" value="{{ mandate.id }}">
                         <button type="submit" class="btn btn-link" title="{% trans 'Edit'%}">
-                            <span class="far fa-edit" aria-hidden="true"></span>
+                            <i class="far fa-edit" aria-hidden="true"></i>
                             {% trans 'Edit'%}
                         </button>
                     </form>
                 </td>
             {% elif mandate.state != "TRTS" and mandate.state != "TO_DO" and mandate.state != "DECLINED" %}
-                <td align="center">
+                <td class="text-center">
                     <form method="POST" action="{% url 'phd_supervisor_review_view' %}">
                         {% csrf_token %}
                         <input type="hidden" name="mandate_id" value="{{ mandate.id }}">
                         <button type="submit" class="btn btn-link" title="{% trans 'View'%}">
-                            <span class="far fa-eye" aria-hidden="true"></span>
+                            <i class="fas fa-eye" aria-hidden="true"></i>
                             {% trans 'View'%}
                         </button>
                     </form>
                 </td>
             {% else %}
-                <td align="center"><span class="fas fa-ban" aria-hidden="true"></span></td>
+                <td class="text-center"><i class="fas fa-ban" aria-hidden="true"></i></td>
             {% endif %}
             </tr>
         {% endfor %}
@@ -117,8 +118,8 @@
 </div>
 {% endblock %}
 {% block script %}
-<script type="text/javascript" src="{% static 'js/jquery.dataTables.min.js' %}"></script>
-<script type="text/javascript" src="{% static 'js/dataTables.bootstrap.min.js' %}"></script>
+<script type="text/javascript" src="{% static 'js/bootstrap5/jquery.dataTables.min.js' %}"></script>
+<script type="text/javascript" src="{% static 'js/bootstrap5/dataTables.bootstrap5.js' %}"></script>
 <script>
 $(document).ready(function() {
     $('#myTable').DataTable( {
