--- a/templates/reviewer_add_reviewer.html
+++ b/templates/reviewer_add_reviewer.html
@@ -1,4 +1,4 @@
-{% extends "layout.html" %}
+{% extends "bootstrap5/layout.html" %}
 {% load static %}
 {% load i18n %}
 
@@ -26,21 +26,22 @@
 * see http://www.gnu.org/licenses/.
 {% endcomment %}
 {% block style %}
-<link rel="stylesheet" href="{% static 'css/dataTables.bootstrap.min.css' %}">
+<link rel="stylesheet" href="{% static 'css/osis.css' %}">
+<link rel="stylesheet" href="{% static 'css/bootstrap5/dataTables.bootstrap5.min.css' %}">
 <link rel="stylesheet" href="{% static 'css/jquery-ui.css' %}">
 {% endblock %}
 {% block breadcrumb %}
-<li><a href="{% url 'reviewer_mandates_list' %}" id="lnk_reviewer_mandates_list">{% trans 'List of files' %}</a></li>
-<li><a href="{% url 'reviewer_delegation' %}" id="lnk_reviewer_delegation">{% trans 'Delegation(s)' %}</a></li>
-<li class="active">{% trans 'Add a delegate' %}</li>
+<li  class="breadcrumb-item"><a href="{% url 'reviewer_mandates_list' %}" id="lnk_reviewer_mandates_list">{% trans 'List of files' %}</a></li>
+<li  class="breadcrumb-item"><a href="{% url 'reviewer_delegation' %}" id="lnk_reviewer_delegation">{% trans 'Delegation(s)' %}</a></li>
+<li  class="breadcrumb-item active">{% trans 'Add a delegate' %}</li>
 {% endblock %}
 {% block content %}
 <div class="page-header">
     <h6>{% trans 'You are connected as' %} {{ reviewer.person }} ({% trans reviewer.role %}) - {{ entity.acronym }}</h6>
     <h3>{% trans 'Assistant mandate renewal application processing' %} {{ year|add:1 }}</h3>
 </div>
-<div class="panel panel-default">
-    <div class="panel-body">
+<div class="card">
+    <div class="card-body">
     <h5>{% trans 'Choose a person as reviewer for' %} {{ entity.most_recent_acronym }}</h5>
     <form method="POST" action="{% url 'reviewer_delegation_add' %}">
     {{ form.non_field_errors }}
@@ -57,9 +58,9 @@
 	</div>
     <button type="submit" class="btn btn-primary" title="{% trans 'Save'%}" id="bt_add_reviewer_save"
     onclick="return confirm('{% trans 'Are you sure you want to delegate your role? This action is irreversible.' %}')">
-    <span class="far fa-save" aria-hidden="true"></span> {% trans 'Save'%}</button>
+    <i class="far fa-save" aria-hidden="true"></i> {% trans 'Save'%}</button>
     <a class="btn btn-default" id="lnk_upload_cancel" href="{% url 'reviewer_delegation' %}">
-    <span class="fas fa-times" aria-hidden="true"></span> {% trans 'Cancel'%}</a>
+    <i class="fas fa-times" aria-hidden="true"></i> {% trans 'Cancel'%}</a>
     </form>
     </div>
 </div>
