--- a/templates/reviewer_mandates_list.html
+++ b/templates/reviewer_mandates_list.html
@@ -1,4 +1,4 @@
-{% extends "layout.html" %}
+{% extends "bootstrap5/layout.html" %}
 {% load static %}
 {% load i18n %}
 
@@ -26,46 +26,47 @@
 * see http://www.gnu.org/licenses/.
 {% endcomment %}
 {% block style %}
-<link rel="stylesheet" href="{% static 'css/dataTables.bootstrap.min.css' %}">
+<link rel="stylesheet" href="{% static 'css/osis.css' %}">
+<link rel="stylesheet" href="{% static 'css/bootstrap5/dataTables.bootstrap5.min.css' %}">
 {% endblock %}
 {% block breadcrumb %}
-<li class="active">{% trans 'List of files' %}</li>
+<li class="breadcrumb-item active">{% trans 'List of files' %}</li>
 {% endblock %}
 {% block content %}
-<div class="page-header">
+<div class="page-header mb-0 border-bottom-0 pb-0">
     <h6>{% trans 'You are connected as' %} {{ reviewer.person }} ({{ reviewer.get_role_display }}) - {{ entity.acronym }}</h6>
     <h3>{% trans 'Assistant mandate renewal application processing' %} {{ year|add:1 }}</h3>
 
     <ul class="nav nav-tabs">
             {% if filter %}
-                <li><a href="{% url 'reviewer_mandates_list' %}">{% trans 'List of files' %}</a></li>
-                <li class="active"><a href="#">{% trans 'Files that can be treated' %}</a></li>
+                <li class="nav-item"><a href="{% url 'reviewer_mandates_list' %}" class="nav-link">{% trans 'List of files' %}</a></li>
+                <li class="nav-item"><a href="#" class="nav-link active">{% trans 'Files that can be treated' %}</a></li>
             {% else %}
-                <li class="active"><a href="#">{% trans 'List of files' %}</a></li>
-                <li><a href="{% url 'reviewer_mandates_list_todo' %}">{% trans 'Files that can be treated' %}</a></li>
+                <li class="nav-item"><a href="#" class="nav-link active">{% trans 'List of files' %}</a></li>
+                <li class="nav-item"><a href="{% url 'reviewer_mandates_list_todo' %}" class="nav-link">{% trans 'Files that can be treated' %}</a></li>
             {% endif %}
             {% if is_supervisor %}
-                <li><a href="{% url 'phd_supervisor_assistants_list' %}">{% trans 'List of files (as a thesis promoter)' %}</a></li>
+                <li class="nav-item"><a href="{% url 'phd_supervisor_assistants_list' %}" class="nav-link">{% trans 'List of files (as a thesis promoter)' %}</a></li>
             {% endif %}
             {% if can_delegate %}
-                <li><a href="{% url 'reviewer_delegation' %}">{% trans 'Delegation(s)' %}</a></li>
+                <li class="nav-item"><a href="{% url 'reviewer_delegation' %}" class="nav-link">{% trans 'Delegation(s)' %}</a></li>
             {% endif %}
         </ul>
 </div>
-<div class="panel panel-default">
-    <div class="panel-body">
+<div class="card border-top-0">
+    <div class="card-body">
         {% if filter is False %}
-            <div class="row" style="padding-bottom: 5px;">
-                <div class="col-md-6 text-left">
+            <div class="row pb-2">
+                <div class="col-lg-6 text-start">
                     <a href="{% url 'export_mandates_for_entity_pdf' year %}" class="btn btn-default no_spinner">
                         {% trans 'Exporting all data to a PDF file'%}
                     </a>
                 </div>
-	            <div class="col-md-6 text-right">
+	            <div class="col-lg-6 text-end">
                     <form action=" {% url 'reviewer_mandates_list' %} " method="GET">
                     {{ form.academic_year }}
-                    <button type="submit" class="btn btn-default btn-xs" title="{% trans 'Apply'%}" id="bt_filter">
-                        <span class="fas fa-check" aria-hidden="true"></span> {% trans 'Apply'%}</button>
+                    <button type="submit" class="btn btn-default btn-sm" title="{% trans 'Apply'%}" id="bt_filter">
+                        <i class="fas fa-check" aria-hidden="true"></i> {% trans 'Apply'%}</button>
                     </form>
                 </div>
             </div>
@@ -133,35 +134,35 @@
                         {% endif %}
                         </i>
                      {% elif review.status == review_status.IN_PROGRESS and  "VICE_RECTOR" in review.reviewer.role %}
-                        <i id="rev" class="fas fa-circle" style="font-size: 100%;  color: #79C84F;"></i>
+                        <i id="rev" class="fas fa-circle text-sucess" style="font-size: 100%;"></i>
                     {% endif %}
                 {% endfor %}
             </td>
 	        {% if mandate.edit %}
-                <td align="center">
+                <td class="text-center">
                     <form method="POST" action="{% url 'review_edit' %}">
                         {% csrf_token %}
                         <input type="hidden" name="mandate_id" value="{{ mandate.id }}">
                         <button type="submit" class="btn btn-link" title="{% trans 'Edit'%}">
-                            <span class="far fa-edit" aria-hidden="true"></span>
+                            <i class="far fa-edit" aria-hidden="true"></i>
                             {% trans 'Edit'%}
                         </button>
                     </form>
                 </td>
             {% elif mandate.view %}
-                <td align="center">
+                <td class="text-center">
                     <form method="POST" action="{% url 'pst_form_view' %}">
                         {% csrf_token %}
                         <input type="hidden" name="mandate_id" value="{{ mandate.id }}">
                         <input type="hidden" name="role" value="{{ reviewer.role }}">
                         <button type="submit" class="btn btn-link" title="{% trans 'View'%}">
-                            <span class="far fa-eye" aria-hidden="true"></span>
+                            <i class="fas fa-eye" aria-hidden="true"></i>
                             {% trans 'View'%}
                         </button>
                     </form>
                 </td>
             {% else %}
-                <td align="center"><span class="fas fa-ban" aria-hidden="true"></span></td>
+                <td class="text-center"><i class="fas fa-ban" aria-hidden="true"></i></td>
             {% endif %}
             </tr>
         {% endfor %}
@@ -172,8 +173,8 @@
 </div>
 {% endblock %}
 {% block script %}
-<script type="text/javascript" src="{% static 'js/jquery.dataTables.min.js' %}"></script>
-<script type="text/javascript" src="{% static 'js/dataTables.bootstrap.min.js' %}"></script>
+<script type="text/javascript" src="{% static 'js/bootstrap5/jquery.dataTables.min.js' %}"></script>
+<script type="text/javascript" src="{% static 'js/bootstrap5/dataTables.bootstrap5.js' %}"></script>
 <script>
 $(document).ready(function() {
     $('#myTable').DataTable( {
