--- a/templates/settings.html
+++ b/templates/settings.html
@@ -1,4 +1,4 @@
-{% extends "layout.html" %}
+{% extends "bootstrap5/layout.html" %}
 {% load static %}
 {% load i18n %}
 
@@ -26,18 +26,19 @@
 * see http://www.gnu.org/licenses/.
 {% endcomment %}
 {% block style %}
-<link rel="stylesheet" href="{% static 'css/dataTables.bootstrap.min.css' %}">
+<link rel="stylesheet" href="{% static 'css/osis.css' %}">
+<link rel="stylesheet" href="{% static 'css/bootstrap5/dataTables.bootstrap5.min.css' %}">
 {% endblock %}
 {% block breadcrumb %}
-<li><a href="{% url 'manager_home' %}" id="lnk_manager_home">{% trans 'Assistants' %}</a></li>
-<li class="active">{% trans 'Settings' %}</li>
+<li class="breadcrumb-item"><a href="{% url 'manager_home' %}" id="lnk_manager_home">{% trans 'Assistants' %}</a></li>
+<li class="breadcrumb-item active">{% trans 'Settings' %}</li>
 {% endblock %}
 {% block content %}
 <div class="page-header">
     <h3>{% trans 'Assistant mandate renewal application processing' %} {{ year|add:1 }}</h3>
 </div>
-<div class="panel panel-default">
-    <div class="panel-body">
+<div class="card">
+    <div class="card-body">
         <form method="POST" action="{% url 'settings_save' %}">
         {{ form.non_field_errors }}
  		    {% csrf_token %}
@@ -45,34 +46,34 @@
 			    {{ hidden }}
 		    {% endfor %}
         <div class="row">
-            <div class="col-md-6">
-	            <div class="panel-default">
-		            <div class="panel-heading">
-                        <h4>{% trans 'Mandates renewal procedure dates' %}</h4>
+            <div class="col-lg-6">
+	            <div class="card border-0">
+		            <div class="card-heading border-bottom">
+                        <h4 class="fs-5 my-2">{% trans 'Mandates renewal procedure dates' %}</h4>
 		            </div>
-	                <div class="form-group" style="padding-top: 5px;">
+	                <div class="form-group pt-2">
                         <label for="txt_starting_date">{% trans 'Beginning' %}</label>
                         {{ form.starting_date }}
                         <span class="error">{{ form.starting_date.errors }}</span>
                     </div>
-                    <div class="form-group" style="padding-top: 5px;">
+                    <div class="form-group pt-2">
                         <label for="txt_ending_date">{% trans 'End' %}</label>
                         {{ form.ending_date }}
                         <span class="error">{{ form.ending_date.errors }}</span>
                     </div>
                 </div>
             </div>
-            <div class="col-md-6">
-                <div class="panel-default">
-		            <div class="panel-heading">
-                        <h4>{% trans 'Assessment access dates for assistants' %}</h4>
+            <div class="col-lg-6">
+                <div class="card border-0">
+		            <div class="card-heading border-bottom">
+                        <h4 class="fs-5 my-2">{% trans 'Assessment access dates for assistants' %}</h4>
 		            </div>
-                    <div class="form-group" style="padding-top: 5px;">
+                    <div class="form-group pt-2">
                         <label for="txt_assistants_starting_date">{% trans 'Beginning' %}</label>
                         {{ form.assistants_starting_date }}
                         <span class="error">{{ form.assistants_starting_date.errors }}</span>
                     </div>
-                    <div class="form-group" style="padding-top: 5px;">
+                    <div class="form-group pt-2">
                         <label for="txt_assistants_ending_date">{% trans 'End' %}</label>
                         {{ form.assistants_ending_date }}
                         <span class="error">{{ form.assistants_ending_date.errors }}</span>
@@ -81,17 +82,17 @@
             </div>
         </div>
         <div class="row">
-            <div class="col-md-12">
-                <div class="panel-default">
-		            <div class="panel-heading">
-                        <h4>{% trans 'Assistants contract ending dates' %}</h4>
+            <div class="col-lg-12">
+                <div class="card border-0">
+		            <div class="card-heading border-bottom">
+                        <h4 class="fs-5 my-2">{% trans 'Assistants contract ending dates' %}</h4>
 		            </div>
-                    <div class="form-group" style="padding-top: 5px;">
+                    <div class="form-group pt-2">
                         <label for="txt_assistants_starting_date">{% trans 'Beginning' %}</label>
                         {{ form.assistants_contract_end_starting_date }}
                         <span class="error">{{ form.assistants_contract_end_starting_date.errors }}</span>
                     </div>
-                    <div class="form-group" style="padding-top: 5px;">
+                    <div class="form-group pt-2">
                         <label for="txt_assistants_ending_date">{% trans 'End' %}</label>
                         {{ form.assistants_contract_end_ending_date }}
                         <span class="error">{{ form.assistants_contract_end_ending_date.errors }}</span>
@@ -100,9 +101,9 @@
             </div>
         </div>
         <button type="submit" class="btn btn-primary" title="{% trans 'Save'%}" id="bt_settings_save">
-            <span class="far fa-save" aria-hidden="true"></span> {% trans 'Save'%}</button>
+            <i class="far fa-save" aria-hidden="true"></i> {% trans 'Save'%}</button>
             <a class="btn btn-default" id="lnk_cancel" href="{% url 'manager_home' %}">
-            <span class="fas fa-times" aria-hidden="true"></span> {% trans 'Cancel'%}</a>
+            <i class="fas fa-times" aria-hidden="true"></i> {% trans 'Cancel'%}</a>
         </form>
     </div>
 </div>
